--- a/google-auto-loader.css
+++ b/google-auto-loader.css
@@ -1,28 +1,15 @@
-#foot,
-.next-col #extrares,
-#bottomads,
-.next-col #imagebox_bigimages {
-    display: none !important;
-}
-
-.next-col {
-    margin-left: 150px;
-}
-
 .page-number {
     position: relative;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
-    height: 20px;
     margin-bottom: 2em;
+    color: #808080;
 }
-
-.page-number:after {
+.page-number::before {
     content: "";
-    position: absolute;
-    width: 560px;
-    left: 3em;
     background-color: #ededed;
-    display: block;
     height: 1px;
+    width: 100%;
+    margin: 1em 3em;
 }
